--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hwdetector (0.1.8) focal; urgency=medium
+
+  * Focal release
+
+ -- M.Angel Juan <m.angel.juan@gmail.com>  Tue, 13 Oct 2020 18:33:58 +0200
+
 hwdetector (0.1.7.18) bionic; urgency=medium
 
   * Fixes
