--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hwdetector (0.21.9) noble; urgency=medium
+
+  * Initial release for Noble
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 20 Sep 2024 10:25:18 +0200
+
 hwdetector (0.11.9) jammy; urgency=medium
 
   * Initial release for Jammy
